# dcpp_gameobject

./: .gitignore  .gitmodules
project/: CMakeLists.txt
project/include/components/: component.h  gameobject.h  scene.h  transform.h
project/include/help/: deletehelp.h  floathelp.h  vectorhelp.h
project/include/managers/: gameobjectmanager.h
project/include/types/: rtti.h
project/src/components/: gameobject.cpp  scene.cpp  transform.cpp
project/src/managers/: gameobjectmanager.cpp
scripts/: create_cmakelists .bat  create_cmakelists.command
